[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/File.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/ItemSelector.gd" type="Script" id=2]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Ext/KenneyFont/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Object/Crate/crate.png" type="Texture" id=5]
[ext_resource path="res://Ext/KenneyUI/button-red.png" type="Texture" id=6]
[ext_resource path="res://Menu/OptionButton.gd" type="Script" id=7]
[ext_resource path="res://Ext/KenneyUI/button-red-pressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/font_normal.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saves" type="VBoxContainer" parent="Center"]
margin_left = 136.0
margin_top = 56.0
margin_right = 264.0
margin_bottom = 184.0
script = ExtResource( 2 )

[node name="File1" parent="Center/Saves" instance=ExtResource( 1 )]
file_name = "user://file1.save"
title = "File 1"

[node name="File2" parent="Center/Saves" instance=ExtResource( 1 )]
margin_top = 36.0
margin_bottom = 68.0
file_name = "user://file2.save"
title = "File 2"

[node name="File3" parent="Center/Saves" instance=ExtResource( 1 )]
margin_top = 72.0
margin_bottom = 104.0
file_name = "user://file3.save"
title = "File 3"

[node name="Options" type="Control" parent="Center/Saves"]
margin_top = 108.0
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 7 )

[node name="Unpressed" type="NinePatchRect" parent="Center/Saves/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 7, 9 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pressed" type="NinePatchRect" parent="Center/Saves/Options"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 7, 9 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Center/Saves/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_bottom = 2.0
margin_top = 4.0
margin_right = 165.0
margin_bottom = -460.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  Press           to Create/Select File"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 24.0
margin_right = 153.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  Press           to Delete File"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCreate" type="Sprite" parent="."]
position = Vector2( 46, 12 )
texture = ExtResource( 5 )

[node name="BtnDelete" type="Sprite" parent="."]
position = Vector2( 46, 32 )
texture = ExtResource( 5 )
